# blue-team

./: README.md  egress_filtering_check.ps1  processes&ports.bat  shieldsup.ps1  wifi.bat
Bluechecker/: BlueChecker.ps1  README.md
CHIRP/: README.md
CyberChef/: ChefWorker.js.LICENSE.txt  CyberChef_v10.19.4.html  CyberChef_v10.4.0.html  CyberChef_v9.32.1.html  CyberChef_v9.55.0.html
Find-LOLBAS/: README.md
FullEventLogView/: FullEventLogView.chm  readme.txt
Loki/: loki-upgrader.spec
PersistenceSniper/: PersistenceSniper.psm1
SEC505 Scripts/: Command-Line_Arguments.ps1  Command-Line_Named_Parameters.ps1  Compare-FileHashesList.ps1  Control_GUI_App.ps1  ConvertTo-ASCII.ps1  Create-ScheduledTask.ps1  Find_Big_Files.ps1  Import-Excel.ps1  Print-Color-Text.ps1  Read-Excel.ps1  Remove-UndeletableFolder.ps1  Translate.ps1  Windows_Logon_Types.xls  Write-ApplicationLog.ps1
SysAnalyzer/: .todo.txt  av_detections.txt  (+6 more)
_file-analysis/py-amsi/: README.md  setup.cfg  setup.py
_file-analysis/py-amsi/docs/: conf.py  index.rst
_file-analysis/py-amsi/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pyamsi.doctree
_file-analysis/py-amsi/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyamsi.html  search.html  searchindex.js
_file-analysis/py-amsi/docs/_build/html/_sources/: modules.rst.txt  pyamsi.rst.txt
_file-analysis/py-amsi/docs/_build/html/_static/: documentation_options.js
_file-analysis/py-amsi/src/: amsi.h  amsi.lib  scanner.c
_file-analysis/py-amsi/src/pyamsi/: Amsi.py
(+955 files in other folders)
