[metadata]
name = py-amsi
version = 1.11
author = Olorunfemi-Ojo Tomiwa
description = Scan strings and files using the windows antimalware interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tomiwa-Ot/py-amsi
license = MIT
keywords = amsi, py-amsi, python

[options]
include_package_data = True
package_dir =
    = src
